# chessx

./: README.md  cabal.project  chessx.cabal  package-lock.json  package.json  webpack.config.js
app/: Main.hs
lib/ChessX/: API.hs  Board.hs  Error.hs  Game.hs  HTMX.hs  SSE.hs  Server.hs  Token.hs
lib/ChessX/HTMX/: BoardPage.hs  Index.hs  IndexPage.hs  PageTmpl.hs
public/: board.html  index.css  index.html  login.html  reset.css
src/: index.html
