cabal-version:      2.4
name:               chessx
version:            0.1.0.0

synopsis:   HTMX Chess Application
author:     Mattias Jansson
maintainer: mattiasjansson@adabeat.com

copyright: (C) 2023 Mattias Jansson
extra-source-files: public/*

executable chessx
    main-is:          Main.hs
    build-depends:
      base ^>=4.17.2.0,
      warp,
      chessx
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -O3
      -Wall
      -Werror
      -Wno-orphans
      -Wno-missing-signatures
      -threaded
      -rtsopts
      -with-rtsopts=-N

library
    hs-source-dirs: lib
    exposed-modules:
      ChessX.Board
      ChessX.Game
      ChessX.HTMX
      ChessX.HTMX.Index
      ChessX.HTMX.BoardPage
      ChessX.API
      ChessX.Server
      ChessX.Error
    build-depends:
      base ^>=4.17.2.0,
      base64,
      blaze-html,
      bytestring,
      containers,
      http-api-data,
      http-media,
      ihp-hsx ^>= 1.1.0,
      mtl,
      servant,
      servant-server,
      random,
      text,
      wai,
      wai-extra
   default-extensions:
      OverloadedStrings,
      DeriveGeneric,
      DuplicateRecordFields,
      FlexibleContexts,
      FlexibleInstances,
      LambdaCase,
      MultiWayIf,
      MultiParamTypeClasses,
      UndecidableInstances
